<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragment_editor"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/screen_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Экран N"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:gravity="top" />

        <FrameLayout
            android:id="@+id/primary_media_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="180dp"
            android:layout_marginTop="12dp"
            android:background="@color/empty_frame"/>

        <FrameLayout
            android:id="@+id/secondary_media_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="180dp"
            android:layout_marginTop="8dp"
            android:background="@color/empty_frame"/>

        <EditText
            android:id="@+id/enter_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_hint"
            android:layout_marginTop="12dp"
            android:padding="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:weightSum="2"
            android:gravity="center">

            <Button
                android:id="@+id/button_previous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:text="@string/previous"/>

            <Button
                android:id="@+id/button_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:text="@string/next"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:weightSum="2"
            android:gravity="center">

            <Button
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:text="@string/add"/>

            <Button
                android:id="@+id/button_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:text="@string/delete"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>